# numhask-array

./: .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  index.html  naperian.cabal  numhask-array.cabal  numhask-tensor.cabal  package.yaml  readme.md  stack.yaml
other/: Slicer.md  Tensor.md  blog.md  lhs.css
src/: Slicer.lhs  Tensor.lhs
src/NumHask/: Accelerate.hs  Array.hs  ArrayAcc.hs
src/NumHask/Array/: Constraints.hs  Example.hs  Slicer.hs
test/: test.hs
