name:
  naperian
version:
  0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/naperian
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
build-type:
  Simple
cabal-version:
  >=1.14
extra-source-files:
  readme.md
  index.html
  stack.yaml
  other/lhs.css
  other/header.md
library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:      
    src
  exposed-modules:
    Tensor,
    Slicer
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    vector,
    singletons,
    adjunctions,
    distributive,
    typelits-witnesses,
    ghc-typelits-natnormalise
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    -- TypeApplications,
    TypeFamilies,
    TypeOperators

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    base >= 4.7 && < 5,
    tasty,
    HUnit,
    tasty-hunit,
    QuickCheck,
    tasty-quickcheck,
    doctest,
    protolude
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications,
    TypeFamilies,
    TypeOperators

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/naperian
