name: numhask-tensor
version: 0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/numhask-tensor
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
build-type:
  Simple
cabal-version:
  >=1.14
extra-source-files:
  readme.md
  index.html
  stack.yaml
  other/lhs.css
  other/header.md
  other/footer.md
library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:      
    src
  exposed-modules:
    NumHask.Tensor
  other-modules:
    Slicer,
    Tensor
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    numhask,
    QuickCheck,
    vector,
    singletons,
    adjunctions,
    distributive,
    ghc-typelits-natnormalise,
    typelits-witnesses
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    -- TypeApplications,
    TypeFamilies,
    TypeOperators

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    base >= 4.7 && < 5,
    tasty,
    tasty-quickcheck,
    doctest,
    protolude,
    numhask,
    numhask-tensor
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications,
    TypeFamilies,
    TypeOperators

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/naperian
